environments/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelagent-app
  labels:
    app: travelagent-app
spec:
  selector:
    matchLabels:
      app: travelagent-app
  template:
    metadata:
      labels:
        app: travelagent-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: travelagent-app
          image: ghcr.io/simonbrundin/travelagent:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
