environments/prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: travelagent-service
spec:
  selector:
    app: travelagent-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
