environments/prod/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: travelagent-route
  namespace: travelagent
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: simons-gateway
      namespace: envoy
  hostnames:
    - "travelagent.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: travelagent-service
          port: 80
          weight: 1
          namespace: travelagent
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
